--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
+ - name: restart nginx
+   service: name=nginx enabled=yes state=restarted
 
-- name: restart ROLENAME
-  service:
-    name: "{{ ROLENAME_service }}"
-    state: restarted
+ - name: restart php-fpm
+   service: name=php-fpm enabled=yes state=restarted
