--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,10 @@
 ---
 - include_vars: "defaults/main.yml"
+- name: install nginx
+  include: nginx.yml
+- name: install php
+  include: php.yml
+- name: restart nginx
+  service: name=nginx enabled=yes state=restarted
+- name: restart php-fpm
+  service: name=php-fpm enabled=yes state=restarted
