--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -50,9 +50,16 @@
     src: "nginx.conf.j2" 
     dest: "/etc/nginx/nginx.conf" 
 
+- name: ensures the sites directory exists
+  file: 
+    path: /etc/nginx/sites.d 
+    state: directory
+    owner: root
+    group: root
+
 - name: "add the site config"
   template:
     src: virtualhost.conf.j2
-    dest: "/etc/nginx/conf.d/default.conf"
+    dest: "/etc/nginx/sites.d/default.conf"
     owner: root
     group: root
